http/tests/cookies/document-cookie-multiple-cookies.html is failing on Windows https://bugs.webkit.org/show_bug.cgi?id=214880

Reviewed by Darin Adler.

Source/WebCore:

Fix same bug as in r264943 but on Windows.

No new tests, covered by http/tests/cookies/document-cookie-multiple-cookies.html.

* platform/network/cf/NetworkStorageSessionCFNetWin.cpp:
(WebCore::parseDOMCookie):
(WebCore::NetworkStorageSession::setCookiesFromDOM const):

LayoutTests:

Unskip test that is no longer failing on Windows.

* platform/win/TestExpectations:


Canonical link: https://commits.webkit.org/227748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265048 268f45cc-cd09-0410-ab3c-d52691b4dbfc